# lint-quality

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  build.rs  lint-quality.toml  package.json
plans/: 001-initial-cli.md  002-web-trend-dashboard.md
src/: analysis.rs  cli.rs  codeowners.rs  config.rs  main.rs  model.rs  owners.rs  report.rs  scan.rs  scanner.rs
src/output/: human.rs  json.rs  mod.rs
src/output/tui/: app.rs  mod.rs
src/report/: analysis.rs  output.rs
src/report/output/: human.rs  json.rs  tui.rs
src/report/output/tui/: app.rs  tree.rs  widgets.rs
src/scan/: model.rs  patterns.rs  scanner.rs
src/trend/: export.rs  loader.rs  mod.rs  server.rs
tests/: integration.rs
tests/fixtures/: CODEOWNERS  clean.ts  lint-quality.toml  sample.js  sample.ts  sample.vue
web/: index.html  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.node.json  vite.config.ts
web/src/: app.vue  style.css  types.ts
web/src/components/: directory-tree.vue  filter-panel.vue  insights-panel.vue  summary-table.vue  trend-chart.vue
web/src/composables/: use-reports.ts  use-trends.test.ts  use-trends.ts
