[package]
name = "lint-quality"
version = "0.1.0"
edition = "2024"
description = "Detect disabled lint rules in codebases"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1"
regex = "1"
ignore = "0.4"
glob = "0.3"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
colored = "3"
ratatui = "0.30"
crossterm = "0.29"
